fix: add z-index for categories button to make it clickable

--- a/public/output.css
+++ b/public/output.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* input.css */
 
@@ -3906,6 +3906,10 @@ html:has(.drawer-toggle:checked){
   position: relative;
 }
 
+.sticky{
+  position: sticky;
+}
+
 .inset-0{
   inset: 0px;
 }
@@ -3935,16 +3939,16 @@ html:has(.drawer-toggle:checked){
   top: 50%;
 }
 
+.top-44{
+  top: 11rem;
+}
+
 .z-10{
   z-index: 10;
 }
 
 .z-20{
   z-index: 20;
-}
-
-.z-40{
-  z-index: 40;
 }
 
 .z-50{
@@ -3978,6 +3982,11 @@ html:has(.drawer-toggle:checked){
   margin-right: auto;
 }
 
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .my-20{
   margin-top: 5rem;
   margin-bottom: 5rem;
@@ -3986,6 +3995,11 @@ html:has(.drawer-toggle:checked){
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-40{
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 .my-44{
@@ -4030,8 +4044,16 @@ html:has(.drawer-toggle:checked){
   margin-bottom: 1.5rem;
 }
 
+.mb-7{
+  margin-bottom: 1.75rem;
+}
+
 .mb-8{
   margin-bottom: 2rem;
+}
+
+.me-2{
+  margin-inline-end: 0.5rem;
 }
 
 .ml-2{
@@ -4044,6 +4066,10 @@ html:has(.drawer-toggle:checked){
 
 .ml-4{
   margin-left: 1rem;
+}
+
+.ml-7{
+  margin-left: 1.75rem;
 }
 
 .ml-9{
@@ -4086,8 +4112,15 @@ html:has(.drawer-toggle:checked){
   margin-top: 2rem;
 }
 
-.mt-auto{
-  margin-top: auto;
+.ml-1{
+  margin-left: 0.25rem;
+}
+
+.line-clamp-2{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .line-clamp-3{
@@ -4131,6 +4164,10 @@ html:has(.drawer-toggle:checked){
 
 .aspect-\[16\/9\]{
   aspect-ratio: 16/9;
+}
+
+.aspect-video{
+  aspect-ratio: 16 / 9;
 }
 
 .size-6{
@@ -4190,12 +4227,20 @@ html:has(.drawer-toggle:checked){
   height: 24rem;
 }
 
+.h-\[1px\]{
+  height: 1px;
+}
+
 .h-auto{
   height: auto;
 }
 
 .h-full{
   height: 100%;
+}
+
+.max-h-\[calc\(100vh-180px\)\]{
+  max-height: calc(100vh - 180px);
 }
 
 .min-h-\[400px\]{
@@ -4303,6 +4348,10 @@ html:has(.drawer-toggle:checked){
   max-width: 28rem;
 }
 
+.max-w-none{
+  max-width: none;
+}
+
 .max-w-xl{
   max-width: 36rem;
 }
@@ -4366,10 +4415,6 @@ html:has(.drawer-toggle:checked){
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-\[10\%_45\%_5\%_40\%\]{
-  grid-template-columns: 10% 45% 5% 40%;
-}
-
 .grid-cols-\[33\%_2\%_65\%\]{
   grid-template-columns: 33% 2% 65%;
 }
@@ -4382,10 +4427,6 @@ html:has(.drawer-toggle:checked){
   grid-template-columns: 55% 2% 43%;
 }
 
-.grid-cols-\[65\%_2\%_33\%\]{
-  grid-template-columns: 65% 2% 33%;
-}
-
 .grid-cols-\[65\%_5\%_30\%\]{
   grid-template-columns: 65% 5% 30%;
 }
@@ -4396,6 +4437,10 @@ html:has(.drawer-toggle:checked){
 
 .grid-cols-\[69\%_2\%_29\%\]{
   grid-template-columns: 69% 2% 29%;
+}
+
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
@@ -4553,6 +4598,10 @@ html:has(.drawer-toggle:checked){
   overflow-x: auto;
 }
 
+.overflow-y-auto{
+  overflow-y: auto;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -4694,6 +4743,11 @@ html:has(.drawer-toggle:checked){
   background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity, 1));
+}
+
 .bg-blue-600{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
@@ -4759,10 +4813,6 @@ html:has(.drawer-toggle:checked){
   padding: 0px;
 }
 
-.p-1{
-  padding: 0.25rem;
-}
-
 .p-10{
   padding: 2.5rem;
 }
@@ -4791,6 +4841,10 @@ html:has(.drawer-toggle:checked){
   padding: 2rem;
 }
 
+.p-1{
+  padding: 0.25rem;
+}
+
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -4799,6 +4853,11 @@ html:has(.drawer-toggle:checked){
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-2\.5{
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .px-20{
@@ -4829,6 +4888,11 @@ html:has(.drawer-toggle:checked){
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-0\.5{
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .py-1{
@@ -4879,12 +4943,24 @@ html:has(.drawer-toggle:checked){
   padding-bottom: 0.5rem;
 }
 
+.pb-7{
+  padding-bottom: 1.75rem;
+}
+
 .pl-10{
   padding-left: 2.5rem;
 }
 
+.pr-4{
+  padding-right: 1rem;
+}
+
 .pr-5{
   padding-right: 1.25rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
 }
 
 .text-left{
@@ -4893,6 +4969,10 @@ html:has(.drawer-toggle:checked){
 
 .text-center{
   text-align: center;
+}
+
+.text-justify{
+  text-align: justify;
 }
 
 .text-2xl{
@@ -4994,6 +5074,11 @@ html:has(.drawer-toggle:checked){
 .text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
+}
+
+.text-blue-800{
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-300{
@@ -5165,6 +5250,12 @@ html:has(.drawer-toggle:checked){
   transition-duration: 150ms;
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-shadow{
   transition-property: box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -5181,8 +5272,12 @@ html:has(.drawer-toggle:checked){
   transition-duration: 300ms;
 }
 
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 * {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 .header {
@@ -5210,6 +5305,11 @@ html:has(.drawer-toggle:checked){
   background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-blue-900:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
@@ -5218,6 +5318,11 @@ html:has(.drawer-toggle:checked){
 .hover\:bg-gray-200:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-gray-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-gray-50:hover{
@@ -5317,6 +5422,11 @@ html:has(.drawer-toggle:checked){
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-500:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1));
 }
 
 .focus\:ring-zinc-800:focus{
@@ -5421,6 +5531,15 @@ html:has(.drawer-toggle:checked){
     border-bottom-left-radius: 0.5rem;
   }
 
+  .md\:p-8{
+    padding: 2rem;
+  }
+
+  .md\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .md\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
@@ -5445,6 +5564,14 @@ html:has(.drawer-toggle:checked){
     display: block;
   }
 
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .lg\:w-2\/3{
+    width: 66.666667%;
+  }
+
   .lg\:w-64{
     width: 16rem;
   }
@@ -5461,6 +5588,10 @@ html:has(.drawer-toggle:checked){
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
   .lg\:px-16{
     padding-left: 4rem;
     padding-right: 4rem;
@@ -5469,5 +5600,10 @@ html:has(.drawer-toggle:checked){
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 }
